squash merge from feb23

--- a/cabal.project
+++ b/cabal.project
@@ -1,5 +1,8 @@
 packages: ./
           ../eut/v2/Euterpea2/
           ../eut/hsom/HSoM/
+          ../MusicRepos/UISF/UISF
+          ../MusicRepos/haskell-chart/chart
+          ../MusicRepos/haskell-chart/chart-diagrams
 jobs: $ncpus
 package parthenopea
