--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -6,8 +6,7 @@ license:
 category:       Sound
 maintainer:     William Clements <william@clementsassociates.net>
 synopsis:       William Clements Music
-description:    William Clements Music using Euterpea
-
+description:    William Clements Music using Euterpea library
 library
   hs-source-dirs: .
   ghc-options: -O2 -funbox-strict-fields -fexcess-precision
@@ -18,29 +17,35 @@ library
         Cecil,
         Covers,
         Fanfare,
+        Illiterate,
+        KnightsTour,
         LoadEmAll,
         Parthenopea,
         Percussion,
         Players,
         Signals,
-        Simple
+        Simple,
+        SunPyg,
+        WHC
   other-modules:
   build-depends:
+        array>=0.5.0.0 && <=0.6,
         base >= 4 && < 5,
         binary >= 0.8.9.0 && < 1.0,
-        markov-chain >= 0.0.3.4 && < 0.0.4,
-        Euterpea >= 2.0.8,
-        arrows >= 0.4 && < 0.5,
-        array>=0.5.0.0 && <=0.6,
-        deepseq>=1.3.0.2 && <=1.5,
-        random>=1.0.1.1 && <=1.2,
-        PortMidi==0.2.0.0,
-        HCodecs >= 0.5.1 && <= 0.6,
-        stm >= 2.4 && <2.6,
+        bytestring >= 0.10.4.0 && <= 0.12,
+        Chart >= 1.9.4 && <= 2.0,
+        Chart-diagrams >= 1.9.4 && < 2.0,
+        colour >= 2.3.6 && < 3.0,
         containers>=0.5.5.1 && <0.7,
-        bytestring>=0.10.4.0 && <= 0.12,
-        heap >= 1.0 && < 2.0,
+        data-default-class >= 0.1.2.0 && < 2.0,
+        deepseq>=1.3.0.2 && <=1.5,
+        Euterpea >= 2.0.8,
+        HCodecs >= 0.5.1 && <= 0.6,
         HSoM >= 1.0.0 && < 2.0,
+        lens >= 5.2.1 && < 6.0,
+        PortMidi==0.2.0.0,
+        random>=1.0.1.1 && <=1.2,
+        stm >= 2.4 && <2.6,
         UISF >= 0.4.0.0,
-        pure-fft >= 0.2.0,
+        
         ghc-prim
