--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -27,6 +27,7 @@ Library
         Parthenopea,
         Percussion,
         Players,
+        Rosters,
         Signals,
         Simple,
         SoundFont,
