--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -47,6 +47,7 @@ Library
         HCodecs >= 0.5.1 && <= 0.6,
         HSoM >= 1.0.0 && < 2.0,
         lens >= 5.2.1 && < 6.0,
+        monadplus >= 1.4.3 && < 2.0,
         random>=1.0.1.1 && <=1.2,
         stm >= 2.4 && <2.6,
         UISF >= 0.4.0.0,
