--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -48,6 +48,7 @@ Library
         HSoM >= 1.0.0 && < 2.0,
         lens >= 5.2.1 && < 6.0,
         monadplus >= 1.4.3 && < 2.0,
+        mtl >= 2.2.0 && < 3.0,
         random>=1.0.1.1 && <=1.2,
         stm >= 2.4 && <2.6,
         UISF >= 0.4.0.0,
