--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -32,6 +32,7 @@ Library
         Simple,
         SoundFont,
         SunPyg,
+        Synthesizer,
         WHC
   other-modules:
   build-depends:
