--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -32,6 +32,7 @@ Library
         SoundFont,
         SunPyg,
         Synthesizer,
+        Syntoolkit,
         WHC
   other-modules:
   build-depends:
