--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -52,6 +52,7 @@ Library
         mtl >= 2.2.0 && < 3.0,
         random>=1.0.1.1 && <=1.2,
         stm >= 2.4 && <2.6,
+        time >= 1.11.1.1 && < 2.0,
         UISF >= 0.4.0.0,
         
         ghc-prim
