split off Modulation from SoundFont and Synthesizer

--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -23,6 +23,7 @@ Library
         Fanfare,
         Illiterate,
         KnightsTour,
+        Modulation,
         Parthenopea,
         Percussion,
         Players,
