split off Chart from WHC

--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -19,6 +19,7 @@ Library
         Aleatory,
         Baking,
         Cecil,
+        Chart,
         Covers,
         Fanfare,
         Illiterate,
