split off ModulationTest from Modulation

--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -23,8 +23,8 @@ Library
         Covers,
         Fanfare,
         Illiterate,
-        KnightsTour,
         Modulation,
+        ModulationTest,
         Parthenopea,
         Percussion,
         Players,
