--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -39,6 +39,7 @@ Library
         array                      >= 0.5.0.0            && <= 0.6,
         arrows                     >= 0.4                && < 0.5,
         base                       >= 4                  && < 5,
+        bytestring                 >= 0.12.1.0,
         Chart                      >= 1.9.4              && <= 2.0,
         Chart-diagrams             >= 1.9.4              && < 2.0,
         colour                     >= 2.3.6              && < 3.0,
@@ -54,7 +55,7 @@ Library
         monadplus                  >= 1.4.3              && < 2.0,
         mtl                        >= 2.2.0              && < 3.0,
         pure-fft                   >= 0.2.0              && < 1.0,
-        random                     >= 1.0.1.1            && <= 1.2,
+        random                     >= 1.0.1.1,
         stm                        >= 2.4                && <2.6,
         time                       >= 1.11.1.1           && < 2.0,
         UISF                       >= 0.4.0.0,
