--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -52,6 +52,7 @@ Library
         HCodecs                    >= 0.5.1              && <= 0.6,
         HSoM                       >= 1.0.0              && < 2.0,
         lens                       >= 5.2.1              && < 6.0,
+        MemoTrie                   >= 0.6.11,
         monadplus                  >= 1.4.3              && < 2.0,
         mtl                        >= 2.2.0              && < 3.0,
         pure-fft                   >= 0.2.0              && < 1.0,
