split off Discrete from Modulation - haven't begun migrating code

--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -21,6 +21,7 @@ Library
         Cecil,
         Chart,
         Covers,
+        Discrete,
         Fanfare,
         Illiterate,
         Modulation,
