--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -71,29 +71,28 @@ library
 
     -- Other library packages from which modules are imported.
     build-depends:
-        array                      >= 0.5.0.0            && <= 0.6,
-        arrows                     >= 0.4                && < 0.5,
-        base                       >= 4                  && < 5,
+        array                      >= 0.5.0.0,
+        arrows                     >= 0.4,
+        base                       >= 4,
         bytestring                 >= 0.12.1.0,
-        Chart                      >= 1.9.4              && <= 2.0,
-        Chart-diagrams             >= 1.9.4              && < 2.0,
-        colour                     >= 2.3.6              && < 3.0,
-        containers                 >= 0.5.5.1            && < 0.7,
-        data-default-class         >= 0.1.2.0            && < 2.0,
-        deepseq                    >= 1.3.0.2            && <= 1.5,
+        Chart                      >= 1.9.4,
+        Chart-diagrams             >= 1.9.4,
+        colour                     >= 2.3.6,
+        containers                 >= 0.5.5.1,
+        data-default-class         >= 0.1.2.0,
+        deepseq                    >= 1.3.0.2,
         Euterpea                   >= 2.0.8,
         filepattern                >= 0.1.3,
         fuzzyfind                  >= 3.0.1,
-        HCodecs                    >= 0.5.1              && <= 0.6,
-        HSoM                       >= 1.0.0              && < 2.0,
-        lens                       >= 5.2.1              && < 6.0,
+        HCodecs                    >= 0.5.1,
+        HSoM                       >= 1.0.0,
+        lens                       >= 5.2.1,
         MemoTrie                   >= 0.6.11,
-        monadplus                  >= 1.4.3              && < 2.0,
-        mtl                        >= 2.2.0              && < 3.0,
-        pure-fft                   >= 0.2.0              && < 1.0,
+        monadplus                  >= 1.4.3,
+        mtl                        >= 2.2.0,
+        pure-fft                   >= 0.2.0,
         random                     >= 1.0.1.1,
-        stm                        >= 2.4                && <2.6,
-        time                       >= 1.11.1.1           && < 2.0,
+        time                       >= 1.11.1.1,
         UISF                       >= 0.4.0.0,
         vector                     >= 0.13.1.0,
         
@@ -134,28 +133,28 @@ executable h
     build-depends:
         base                       ^>=4.17.2.1,
         h,
-        array                      >= 0.5.0.0            && <= 0.6,
-        arrows                     >= 0.4                && < 0.5,
+        array                      >= 0.5.0.0,
+        arrows                     >= 0.4,
+        base                       >= 4,
         bytestring                 >= 0.12.1.0,
-        Chart                      >= 1.9.4              && <= 2.0,
-        Chart-diagrams             >= 1.9.4              && < 2.0,
-        colour                     >= 2.3.6              && < 3.0,
-        containers                 >= 0.5.5.1            && < 0.7,
-        data-default-class         >= 0.1.2.0            && < 2.0,
-        deepseq                    >= 1.3.0.2            && <= 1.5,
+        Chart                      >= 1.9.4,
+        Chart-diagrams             >= 1.9.4,
+        colour                     >= 2.3.6,
+        containers                 >= 0.5.5.1,
+        data-default-class         >= 0.1.2.0,
+        deepseq                    >= 1.3.0.2,
         Euterpea                   >= 2.0.8,
         filepattern                >= 0.1.3,
         fuzzyfind                  >= 3.0.1,
-        HCodecs                    >= 0.5.1              && <= 0.6,
-        HSoM                       >= 1.0.0              && < 2.0,
-        lens                       >= 5.2.1              && < 6.0,
+        HCodecs                    >= 0.5.1,
+        HSoM                       >= 1.0.0,
+        lens                       >= 5.2.1,
         MemoTrie                   >= 0.6.11,
-        monadplus                  >= 1.4.3              && < 2.0,
-        mtl                        >= 2.2.0              && < 3.0,
-        pure-fft                   >= 0.2.0              && < 1.0,
+        monadplus                  >= 1.4.3,
+        mtl                        >= 2.2.0,
+        pure-fft                   >= 0.2.0,
         random                     >= 1.0.1.1,
-        stm                        >= 2.4                && <2.6,
-        time                       >= 1.11.1.1           && < 2.0,
+        time                       >= 1.11.1.1,
         UISF                       >= 0.4.0.0,
         vector                     >= 0.13.1.0,
         
