--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -52,7 +52,7 @@ extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
-    ghc-options: -O2 -funbox-strict-fields -fexcess-precision -Wall
+    ghc-options: -g2 -v4 -O2 -funbox-strict-fields -fexcess-precision -Wall
 
 library
     -- Import common warning flags.
