--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -79,13 +79,14 @@ library
         base                       >= 4,
         bytestring                 >= 0.12.1.0,
         Chart                      >= 1.9.4,
-        Chart-diagrams             >= 1.9.4,
+        -- fsnotify failure  Chart-diagrams             >= 1.9.4,
         colour                     >= 2.3.6,
         containers                 >= 0.5.5.1,
         data-default-class         >= 0.1.2.0,
         deepseq                    >= 1.3.0.2,
         Euterpea                   >= 2.0.8,
         filepattern                >= 0.1.3,
+        fsnotify                   >= 0.4.1,
         fuzzyfind                  >= 3.0.1,
         HCodecs                    >= 0.5.1,
         HSoM                       >= 1.0.0,
