--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -52,11 +52,11 @@ extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
-    ghc-options: -rtsopts -g2 -v4 -O2 -funbox-strict-fields -fexcess-precision -Wall
+    ghc-options: -O2 -funbox-strict-fields -fexcess-precision -Wall
 
 library
     -- Import common warning flags.
-    -- import:           warnings
+    import:           warnings
 
     -- Modules exported by the library.
     exposed-modules: Rosters
