--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -66,7 +66,7 @@ library
                     Covers, Discrete, DiscreteTest, Fanfare,
                     Modulation, ModulationTest, Parthenopea,
                     ParthenopeaTest, Percussion, Scoring,
-                    SoundFont,
+                    Runtime, SoundFont,
                     SunPyg, Synthesizer, SynthesizerTest,
                     SynToolkit
 
