--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -64,15 +64,15 @@ library
     -- Modules included in this library but not exported.
     other-modules:  Baking, Boot, BootTest, Chart,
                     Discrete, DiscreteTest,
-                    Modulation, ModulationTest,
                     Parthenopea.Debug, Parthenopea.Siren,
+                    Parthenopea.Repro.Modulation, Parthenopea.Repro.ModulationTest,
+                    Parthenopea.Repro.Synthesizer, Parthenopea.Repro.SynthesizerTest,
                     Parthenopea.Tunes.Cecil,
                     Parthenopea.Tunes.Covers,
                     Parthenopea.Tunes.Fanfare,
                     Parthenopea.Tunes.SunPyg,
                     Percussion, Scoring,
                     Runtime, SmashingTest, SoundFont,
-                    Synthesizer, SynthesizerTest,
                     SynToolkit
 
     -- LANGUAGE extensions used by modules in this package.
