introduce Smashing module in Repro

--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -67,10 +67,11 @@ library
                     Parthenopea.Repro.SmashingTest,
                     Parthenopea.Debug, Parthenopea.Siren,
                     Parthenopea.Repro.Modulation, Parthenopea.Repro.ModulationTest,
+                    Parthenopea.Repro.Smashing, 
                     Parthenopea.Repro.Synthesizer, Parthenopea.Repro.SynthesizerTest,
                     Parthenopea.SoundFont.Boot, Parthenopea.SoundFont.BootTest,
-                    Parthenopea.SoundFont.Runtime,
-                    Parthenopea.SoundFont.Scoring, Parthenopea.SoundFont.SFSpec,
+                    Parthenopea.SoundFont.Runtime, Parthenopea.SoundFont.Scoring,
+                    Parthenopea.SoundFont.SFSpec,
                     Parthenopea.Tunes.Cecil,
                     Parthenopea.Tunes.Covers,
                     Parthenopea.Tunes.Fanfare,
