--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -62,13 +62,14 @@ library
     exposed-modules: Rosters
     
     -- Modules included in this library but not exported.
-    other-modules:  Baking, Chart,
+    other-modules:  Baking, Parthenopea.Repro.Chart,
                     Parthenopea.Repro.Discrete, Parthenopea.Repro.DiscreteTest,
                     Parthenopea.Repro.SmashingTest,
                     Parthenopea.Debug, Parthenopea.Siren,
                     Parthenopea.Repro.Modulation, Parthenopea.Repro.ModulationTest,
                     Parthenopea.Repro.Smashing, 
                     Parthenopea.Repro.Synthesizer, Parthenopea.Repro.SynthesizerTest,
+                    Parthenopea.Repro.SynToolkit,
                     Parthenopea.SoundFont.Boot, Parthenopea.SoundFont.BootTest,
                     Parthenopea.SoundFont.Runtime, Parthenopea.SoundFont.Scoring,
                     Parthenopea.SoundFont.SFSpec,
@@ -76,8 +77,7 @@ library
                     Parthenopea.Tunes.Covers,
                     Parthenopea.Tunes.Fanfare,
                     Parthenopea.Tunes.SunPyg,
-                    Percussion,
-                    SynToolkit
+                    Percussion
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
