--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -65,7 +65,7 @@ library
     other-modules:  Parthenopea.Music.Baking, Parthenopea.Repro.Chart,
                     Parthenopea.Repro.Discrete, Parthenopea.Repro.DiscreteTest,
                     Parthenopea.Repro.SmashingTest,
-                    Parthenopea.Debug, Parthenopea.Siren,
+                    Parthenopea.Debug, Parthenopea.Music.Siren,
                     Parthenopea.Repro.Modulation, Parthenopea.Repro.ModulationTest,
                     Parthenopea.Repro.Smashing, 
                     Parthenopea.Repro.Synthesizer, Parthenopea.Repro.SynthesizerTest,
