--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -89,8 +89,9 @@ library
         bytestring                 >= 0.12.1.0,
         Chart                      >= 1.9.4,
         Chart-diagrams             >= 1.9.5.1,
-        colour                     >= 2.3.6,
+        chart-svg                  >= 0.8.0.3,
         containers                 >= 0.5.5.1,
+        diagrams-lib               >= 1.5,
         data-default-class         >= 0.1.2.0,
         deepseq                    >= 1.3.0.2,
         Euterpea                   >= 2.0.8,
@@ -100,6 +101,7 @@ library
         lens                       >= 5.2.1,
         MemoTrie                   >= 0.6.11,
         monadplus                  >= 1.4.3,
+        prettychart                >= 0.3.0.1,
         pure-fft                   >= 0.2.0,
         random                     >= 1.0.1.1,
         time                       >= 1.11.1.1,
