--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -49,21 +49,20 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules: Parthenopea.Music.Rosters
+    exposed-modules:     Parthenopea.Debug, Parthenopea.Music.Baking,
+                         Parthenopea.Music.Percussion, Parthenopea.Music.Siren,
+                         Parthenopea.Repro.Discrete, 
+                         Parthenopea.SoundFont.Boot, Parthenopea.SoundFont.Runtime
     
     -- Modules included in this library but not exported.
-    other-modules:  Parthenopea.Debug,
-    
-                    Parthenopea.Music.Baking, Parthenopea.Music.Percussion, Parthenopea.Music.Siren,
+    other-modules:       Parthenopea.Repro.Chart, Parthenopea.Repro.DiscreteTest,
+                         Parthenopea.Repro.Emission, Parthenopea.Repro.Modulation, Parthenopea.Repro.ModulationTest,
+                         Parthenopea.Repro.Smashing, Parthenopea.Repro.SmashingTest,
+                         Parthenopea.Repro.Synthesizer, Parthenopea.Repro.SynthesizerTest,
+                         Parthenopea.Repro.Envelopes, Parthenopea.Repro.EnvelopesTest,
 
-                    Parthenopea.Repro.Chart, Parthenopea.Repro.Discrete, Parthenopea.Repro.DiscreteTest,
-                    Parthenopea.Repro.Emission, Parthenopea.Repro.Modulation, Parthenopea.Repro.ModulationTest,
-                    Parthenopea.Repro.Smashing, Parthenopea.Repro.SmashingTest,
-                    Parthenopea.Repro.Synthesizer, Parthenopea.Repro.SynthesizerTest,
-                    Parthenopea.Repro.Envelopes, Parthenopea.Repro.EnvelopesTest,
-
-                    Parthenopea.SoundFont.Boot, Parthenopea.SoundFont.BootTest,
-                    Parthenopea.SoundFont.Runtime, Parthenopea.SoundFont.Scoring, Parthenopea.SoundFont.SFSpec,
+                         Parthenopea.SoundFont.BootTest,
+                         Parthenopea.SoundFont.Scoring, Parthenopea.SoundFont.SFSpec
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
