--- a/PConsole/PConsole.cabal
+++ b/PConsole/PConsole.cabal
@@ -53,7 +53,7 @@ executable PConsole
     
     -- Modules included in this executable, other than Main.
     other-modules:  PConsole.Tunes.Cecil, PConsole.Tunes.Covers,
-                    PConsole.Tunes.Fanfare, PConsole.Tunes.SunPyg
+                    PConsole.Tunes.Fanfare, PConsole.Tunes.Rosters, PConsole.Tunes.SunPyg
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
