--- a/PConsole/PConsole.cabal
+++ b/PConsole/PConsole.cabal
@@ -53,7 +53,7 @@ executable PConsole
     
     -- Modules included in this executable, other than Main.
     other-modules:  Tunes.Cecil, Tunes.Covers,
-                    Tunes.Fanfare, Tunes.Rosters, Tunes.SunPyg
+                    Tunes.Fanfare, Tunes.SunPyg
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
