--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -52,7 +52,8 @@ library
     exposed-modules:     Parthenopea.Debug, Parthenopea.Music.Baking,
                          Parthenopea.Music.Percussion, Parthenopea.Music.Siren,
                          Parthenopea.Repro.Discrete, 
-                         Parthenopea.SoundFont.Boot, Parthenopea.SoundFont.Runtime
+                         Parthenopea.SoundFont.Boot, Parthenopea.SoundFont.Runtime,
+                         Parthenopea.SoundFont.Command
     
     -- Modules included in this library but not exported.
     other-modules:       Parthenopea.Repro.Chart, Parthenopea.Repro.DiscreteTest,
@@ -61,8 +62,7 @@ library
                          Parthenopea.Repro.Synthesizer, Parthenopea.Repro.SynthesizerTest,
                          Parthenopea.Repro.Envelopes, Parthenopea.Repro.EnvelopesTest,
 
-                         Parthenopea.SoundFont.BootTest,
-                         Parthenopea.SoundFont.Scoring, Parthenopea.SoundFont.SFSpec
+                         Parthenopea.SoundFont.BootTest, Parthenopea.SoundFont.Scoring, Parthenopea.SoundFont.SFSpec
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
