--- a/PCommand/PCommand.cabal
+++ b/PCommand/PCommand.cabal
@@ -1,7 +1,7 @@
 cabal-version:      3.0
 --
 -- The name of the package.
-name:               PConsole
+name:               PCommand
 
 -- The package version.
 -- See the Haskell package versioning policy (PVP) for standards
@@ -44,7 +44,7 @@ extra-doc-files:    CHANGELOG.md
 common warnings
     ghc-options: -Wall -Wno-x-partial
 
-executable PConsole
+executable PCommand
     -- Import common warning flags.
     import:         warnings
 
