--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -50,6 +50,7 @@ library
 
     -- Modules exported by the library.
     exposed-modules:     Parthenopea.Debug, Parthenopea.Music.Baking,
+                         Parthenopea.Music.Passage,
                          Parthenopea.Music.Percussion, Parthenopea.Music.Siren,
                          Parthenopea.Repro.Discrete, 
                          Parthenopea.SoundFont.Boot, Parthenopea.SoundFont.Command,
@@ -57,11 +58,12 @@ library
                          
     
     -- Modules included in this library but not exported.
-    other-modules:       Parthenopea.Repro.Chart, Parthenopea.Repro.DiscreteTest,
+    other-modules:       Parthenopea.Music.PassageTest,
+                         Parthenopea.Repro.Chart, Parthenopea.Repro.DiscreteTest,
                          Parthenopea.Repro.Emission, Parthenopea.Repro.Modulation, Parthenopea.Repro.ModulationTest,
+                         Parthenopea.Repro.Envelopes, Parthenopea.Repro.EnvelopesTest,
                          Parthenopea.Repro.Smashing, Parthenopea.Repro.SmashingTest,
                          Parthenopea.Repro.Synthesizer, Parthenopea.Repro.SynthesizerTest,
-                         Parthenopea.Repro.Envelopes, Parthenopea.Repro.EnvelopesTest,
                          Parthenopea.SoundFont.BootTest, Parthenopea.SoundFont.Scoring
 
     -- LANGUAGE extensions used by modules in this package.
