--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -49,19 +49,16 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:     Parthenopea.Debug, Parthenopea.Music.Baking,
-                         Parthenopea.Music.Passage,
-                         Parthenopea.Music.Percussion, Parthenopea.Music.Siren,
-                         Parthenopea.Repro.Discrete, 
-                         Parthenopea.SoundFont.Boot, Parthenopea.SoundFont.Command,
-                         Parthenopea.SoundFont.Runtime, Parthenopea.SoundFont.SFSpec
+    exposed-modules:     Parthenopea.Debug, Parthenopea.Music.Baking, Parthenopea.Music.Passage,
+                         Parthenopea.Music.Percussion, Parthenopea.Music.Siren, Parthenopea.Repro.Discrete, 
+                         Parthenopea.SoundFont.Boot, Parthenopea.SoundFont.Command, Parthenopea.SoundFont.Runtime,
+                         Parthenopea.SoundFont.SFSpec
                          
     
     -- Modules included in this library but not exported.
-    other-modules:       Parthenopea.Music.PassageTest,
-                         Parthenopea.Repro.Chart, Parthenopea.Repro.DiscreteTest,
-                         Parthenopea.Repro.Emission, Parthenopea.Repro.Modulation, Parthenopea.Repro.ModulationTest,
-                         Parthenopea.Repro.Envelopes, Parthenopea.Repro.EnvelopesTest,
+    other-modules:       Parthenopea.Music.PassageTest, Parthenopea.Repro.Chart, Parthenopea.Repro.DiscreteTest,
+                         Parthenopea.Repro.Emission, Parthenopea.Repro.Envelopes, Parthenopea.Repro.EnvelopesTest,
+                         Parthenopea.Repro.Modulation, Parthenopea.Repro.ModulationTest,
                          Parthenopea.Repro.Smashing, Parthenopea.Repro.SmashingTest,
                          Parthenopea.Repro.Synthesizer, Parthenopea.Repro.SynthesizerTest,
                          Parthenopea.SoundFont.BootTest, Parthenopea.SoundFont.Scoring
