--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -52,7 +52,7 @@ library
     exposed-modules:     Parthenopea.Debug, Parthenopea.Music.Baking, Parthenopea.Music.Passage,
                          Parthenopea.Music.Percussion, Parthenopea.Music.Siren, Parthenopea.Repro.Discrete, 
                          Parthenopea.SoundFont.Boot, Parthenopea.SoundFont.Command, Parthenopea.SoundFont.Runtime,
-                         Parthenopea.SoundFont.SFSpec
+                         Parthenopea.SoundFont.SFSpec, Parthenopea.SoundFont.Utility
                          
     
     -- Modules included in this library but not exported.
