--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -70,30 +70,30 @@ library
 
     -- Other library packages from which modules are imported.
     build-depends:
-        array                      >= 0.5.0.0,
+        array                      >= 0.5.8.0,
         arrows                     >= 0.4,
         base                       >= 4,
-        bytestring                 >= 0.12.1.0,
-        Chart                      >= 1.9.4,
+        bytestring                 >= 0.12.2.0,
+        Chart                      >= 1.9.5,
         Chart-diagrams             >= 1.9.5.1,
-        chart-svg                  >= 0.8.0.3,
-        containers                 >= 0.5.5.1,
-        diagrams-lib               >= 1.5,
-        data-default-class         >= 0.1.2.0,
-        deepseq                    >= 1.3.0.2,
+        chart-svg                  == 0.8.0.3,
+        containers                 >= 0.6,
+        diagrams-lib               >= 1.5.1,
+        data-default-class         >= 0.2.0.0,
+        deepseq                    >= 1.5.1.0,
         Euterpea                   >= 2.0.8,
         filepattern                >= 0.1.3,
-        fuzzyfind                  >= 3.0.1,
-        HCodecs                    >= 0.5.1,
-        lens                       >= 5.2.1,
+        fuzzyfind                  >= 3.0.2,
+        HCodecs                    >= 0.5.2,
+        lens                       >= 5.3.5,
         MemoTrie                   >= 0.6.11,
         monadplus                  >= 1.4.3,
-        prettychart                >= 0.3.0.1,
+        prettychart                == 0.3.0.1,
         pure-fft                   >= 0.2.0,
-        random                     >= 1.0.1.1,
-        time                       >= 1.11.1.1,
-        transformers               >= 0.5.6.2,
-        vector                     >= 0.13.1.0,
+        random                     >= 1.2.1.3,
+        time                       >= 1.12.2,
+        transformers               >= 0.6.1.0,
+        vector                     >= 0.13.2.0,
         
         ghc-prim
 
