--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -1,6 +1,6 @@
 cabal-version:      3.0
 name:               Parthenopea
-version:            0.1.0.1
+version:            0.0.1.5
 license:            Apache-2.0
 license-file:       LICENSE
 copyright:          William Clements (c) 2022
@@ -60,7 +60,7 @@ library
         diagrams-lib               >= 1.5.1,
         data-default-class         >= 0.2.0.0,
         deepseq                    >= 1.5.1.0,
-        Euterpea                   >= 2.0.8,
+        Euterpea                   >= 2.0.7,
         filepattern                >= 0.1.3,
         fuzzyfind                  >= 3.0.2,
         HCodecs                    >= 0.5.2,
@@ -73,5 +73,20 @@ library
         time                       >= 1.12.2,
         transformers               >= 0.6.1.0,
         vector                     >= 0.13.2.0,
+        
+        ghc-prim
+
+executable PCommand
+    import:             warnings
+    default-language:   GHC2021
+    main-is:            app/PCommand.lhs
+    hs-source-dirs:     PCommand
+    other-modules:      App.Rosters, Tunes.Cecil, Tunes.Covers, Tunes.Fanfare,
+                        Tunes.Opus131, Tunes.SunPyg
+    build-depends:
+        base                       >= 4.15,
+        containers                 >= 0.6,
+        Euterpea                   >= 2.0.8,
+        Parthenopea,
         
         ghc-prim
