--- a/Parthenopea.cabal
+++ b/Parthenopea.cabal
@@ -1,6 +1,6 @@
-cabal-version:      3.0
+cabal-version:      3.14
 name:               Parthenopea
-version:            0.0.1.5
+version:            0.0.1.6
 license:            Apache-2.0
 license-file:       LICENSE
 copyright:          William Clements (c) 2022
@@ -11,7 +11,7 @@ homepage:           https://github.com/WilliamClements/Parthenopea#readme
 bug-reports:        https://github.com/WilliamClements/Parthenopea/issues
 synopsis:           music composition and orchestration tool
 description:
-  Extends Euterpea2 embedded algorithmic composition language. Provides offline (SoundFont-based) synthesis.
+  Provides offline (SoundFont-based) synthesis; extends Euterpea2 algorithmic composition language. 
 
 build-type:         Simple
 
@@ -55,11 +55,11 @@ library
         bytestring                 >= 0.12.2.0,
         Chart                      >= 1.9.5,
         Chart-diagrams             >= 1.9.5.1,
-        chart-svg                  == 0.8.0.3,
-        containers                 >= 0.6,
+        chart-svg                  >= 0.8.0.3,
+        containers                 >= 0.5.5.1,
         diagrams-lib               >= 1.5.1,
         data-default-class         >= 0.2.0.0,
-        deepseq                    >= 1.5.1.0,
+        deepseq                    >= 1.3.0.2,
         Euterpea                   >= 2.0.8,
         filepattern                >= 0.1.3,
         fuzzyfind                  >= 3.0.2,
@@ -67,11 +67,10 @@ library
         lens                       >= 5.3.5,
         MemoTrie                   >= 0.6.11,
         monadplus                  >= 1.4.3,
-        prettychart                == 0.3.0.1,
+        prettychart                >= 0.3.0.1,
         pure-fft                   >= 0.2.0,
         random                     >= 1.2.1.3,
         time                       >= 1.12.2,
-        transformers               >= 0.6.1.0,
         vector                     >= 0.13.2.0,
         
         ghc-prim
@@ -85,7 +84,7 @@ executable PCommand
                         Tunes.Opus131, Tunes.SunPyg
     build-depends:
         base                       >= 4.15,
-        containers                 >= 0.6,
+        containers                 >= 0.5.5.1,
         Euterpea                   >= 2.0.8,
         Parthenopea,
         
